2012-06-12  Huang Dongsung  <luxtella@company100.net>

        [Qt][Texmap] Falling leaves demo missing clipping.
        https://bugs.webkit.org/show_bug.cgi?id=88704

        The bug originated from begining native painting mode of QPainter after enabling
        scissor test, because begining native painting mode disables scissor test.

        Covered by existing compositing tests.

        Reviewed by Noam Rosenthal.

        * platform/graphics/texmap/TextureMapperGL.cpp:
        (WebCore::TextureMapperGL::beginPainting):

2012-06-12  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt][Win] Buildfix related to fromWinHBITMAP
        https://bugs.webkit.org/show_bug.cgi?id=88863

        Reviewed by Jocelyn Turcotte.

        * platform/graphics/qt/GraphicsContextQt.cpp: Add qt_pixmapFromWinHBITMAP and HBitmapFormat enum.
        (WebCore):
        (WebCore::GraphicsContext::releaseWindowsContext):
        * platform/graphics/qt/ImageQt.cpp:
        (WebCore): Move qt_pixmapFromWinHBITMAP to outside of WebCore namespace. (Fix after r119924.)

2012-06-12  Takashi Sakamoto  <tasak@google.com>

        [Shadow DOM] <style> inside Shadow subtree should be scoped inside the subtree.
        https://bugs.webkit.org/show_bug.cgi?id=87805

        Modified HTMLStyleElement to be treated as a scoped style independent
        of its "scoped" attribute's value if HTMLStyleElement is in shadow
        subtree. HTMLStyleElement has the following four cases talking about
        "scoped" attribute and whether is in shadow subtree or not:
        1, HTMLStyleElement is "scoped" and is in document tree,
        2, HTMLStyleElement is "scoped" and is in shadow subtree,
        3, HTMLStyleElement is not "scoped" and is in document tree, and
        4, HTMLStyleElement is not "scoped" and is in shadow subtree.
        The case 1 and 2 are not changed. This patch affected the case 4.
        At the case 4, the HTMLStyleElement's scoping node is the shadow root.