@@ -33,7 +33,7 @@
 
 namespace WebCore {
 
-NotificationController::NotificationController(Page* page, NotificationClient* client)
+NotificationController::NotificationController(NotificationClient* client)
     : m_client(client)
 {
 }
@@ -44,9 +44,9 @@ NotificationController::~NotificationController()
         m_client->notificationControllerDestroyed();
 }
 
-PassOwnPtr<NotificationController> NotificationController::create(Page* page, NotificationClient* client)
+PassOwnPtr<NotificationController> NotificationController::create(NotificationClient* client)
 {
-    return adoptPtr(new NotificationController(page, client));
+    return adoptPtr(new NotificationController(client));
 }
 
 NotificationClient* NotificationController::clientFrom(Page* page)
@@ -64,7 +64,7 @@ const AtomicString& NotificationController::supplementName()
 
 void provideNotification(Page* page, NotificationClient* client)
 {
-    NotificationController::provideTo(page, NotificationController::supplementName(), NotificationController::create(page, client));
+    NotificationController::provideTo(page, NotificationController::supplementName(), NotificationController::create(client));
 }
 
 } // namespace WebCore
